overflow X fixed

--- a/assets/style.css
+++ b/assets/style.css
@@ -12,7 +12,7 @@ body {
     margin: 0px;
     padding: 0px;
     background: #F3F1FF;
-    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 h1,
